--- a/README.Rmd
+++ b/README.Rmd
@@ -80,14 +80,14 @@ After using the `intermed` R package, please cite the following:
 
 ## License
 
-&copy; 2016-2019 [David C. Benkeser](http://www.benkeserstatistics.com)
+&copy; 2021 [David C. Benkeser](http://www.benkeserstatistics.com)
 
 The contents of this repository are distributed under the MIT license. See
 below for details:
 ```
 The MIT License (MIT)
 
-Copyright (c) 2016-2019 David C. Benkeser
+Copyright (c) 2021- David C. Benkeser
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -107,4 +107,3 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 ```
-
